@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: clock.test,v 1.2.1.1 1999/01/29 20:52:09 mo Exp $
+# RCS: @(#) $Id: clock.test,v 1.2 1999/05/10 02:47:48 dejong Exp $
 
 if {[string compare test [info procs test]] == 1} then {source defs}
 
@@ -173,3 +173,30 @@ test clock-6.11 {clock roll over dates} {
     set time [clock scan "March 1, 2001" -gmt true]
     clock format $time -format %j -gmt true
 } {060}
+test clock-7.1 {weekday specification: 2nd monday in november} {
+    set res {}
+    foreach i {91 92 93 94 95 96} {
+	set nov8th [clock scan 11/8/$i -gmt true]
+	set monday [clock scan monday -base $nov8th -gmt true]
+	lappend res [clock format $monday -format %Y-%m-%d -gmt true]
+    }
+    set res
+} {1991-11-11 1992-11-09 1993-11-08 1994-11-14 1995-11-13 1996-11-11}
+test clock-7.2 {day specification: 2nd monday in november (2nd try)} {
+    set res {}
+    foreach i {91 92 93 94 95 96} {
+	set nov1th [clock scan 11/1/$i -gmt true]
+	set monday [clock scan "2 monday" -base $nov1th -gmt true]
+	lappend res [clock format $monday -format %Y-%m-%d -gmt true]
+    }
+    set res
+} {1991-11-11 1992-11-09 1993-11-08 1994-11-14 1995-11-13 1996-11-11}
+test clock-7.3 {day specification: last monday in november} {
+    set res {}
+    foreach i {91 92 93 94 95 96} {
+	set dec1th [clock scan 12/1/$i -gmt true]
+	set monday [clock scan "monday 1 week ago" -base $dec1th -gmt true]
+	lappend res [clock format $monday -format %Y-%m-%d -gmt true]
+    }
+    set res
+} {1991-11-25 1992-11-30 1993-11-29 1994-11-28 1995-11-27 1996-11-25}
